adding JWT Bearer token in swagger Laravel
